--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
         <div id='js-main-desc'  class='two-col-desc'>
           <ul style="margin-left: -20px">
             <li>
-              Expert Guidance: Our team of cyber security experts has extensive experience in protecting small businesses from cyber threats.
+              <span class='font-sb'>Expert Guidance:</span> Our team of cyber security experts has extensive experience in protecting small businesses from cyber threats.
             </li>
             <li>
-              Tailored Solutions: We understand that every business is unique. Our recommendations are customized to meet your specific needs and challenges.
+              <span class='font-sb'>Tailored Solutions:</span> We understand that every business is unique. Our recommendations are customized to meet your specific needs and challenges.
 
             </li>
             <li>
-              Practical Advice: We provide actionable steps that are easy to implement, ensuring that your business is protected without overwhelming you with technical jargon.
+              <span class='font-sb'>Practical Advice:</span> We provide actionable steps that are easy to implement, ensuring that your business is protected without overwhelming you with technical jargon.
 
             </li>
             <li>
-              Ongoing Support: Cyber security is an ongoing process. We are here to support you every step of the way, helping you stay ahead of emerging threats.
+              <span class='font-sb'>Ongoing Support:</span> Cyber security is an ongoing process. We are here to support you every step of the way, helping you stay ahead of emerging threats.
 
             </li>
           </ul>
